feat(product): add sku filter with keyword
